--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <!-- Email Form -->
-        <form class="email-form" action="thankyou.php.html" method="get">
+        <form class="email-form" action="thankyou.html" method="get">
             <input type="email" name="email" placeholder="Email Address" required>
             <button type="submit">Sign Up</button>
         </form>
